[package]
name = "catlines"
version = "1.0.4"
authors = ["Cheuk Yin Ng <cheukyin699@yahoo.com>"]
description = "Controls file output with line ranges!"
repository = "https://github.com/cheukyin699/rust-lines"
readme = "README.md"
keywords = ["ranges", "lines"]
license-file = "LICENSE"

[dependencies]
docopt = "0.8.1"
serde = "1.0.8"
serde_derive = "1.0.8"
